fix: Updated user status & removed link for GK

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,11 +7,11 @@
             E Cart App
         </LinkTo>
     </li>
-    <li class="list-group-item list-group-item-secondary">
+    {{!-- <li class="list-group-item list-group-item-secondary">
         <LinkTo @route="cards">
             GK
         </LinkTo>
-    </li>
+    </li> --}}
 
     {{!-- <li class="list-group-item list-group-item-danger">A simple danger list group item</li>
     <li class="list-group-item list-group-item-warning">A simple warning list group item</li>
