feat: add get-started page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <h1 class="navbar-brand">
             <LinkTo @route="index">
-                Welcome to Ember world
+                Ember - Cart
             </LinkTo>
         </h1>
     </div>
