--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 @import './card.scss';
 @import './product-card.scss';
 @import './chat-app.scss';
+@import './get-started.scss';
 
 .primary-title {
   padding-left: 30px;
